src/global.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Open+Sans&display=swap');

@font-face {
	font-family: 'AATri';
	font-style: normal;
	font-weight: normal;
	src: url('./assets/AATriSerifCZ.otf');
}

body {
	font-family: 'Open Sans', sans-serif;
}

main {
	margin: 10px;
}

*:focus {
	outline: none;
}

.text {
	background-image: url('./assets/textboxbg.png');
	color: white;
	line-height: 1.5;
	padding: 1em 0 1em 0.5em;
	width: 20em;
	height: 4.5em;
	border-radius: 0.25em;
	white-space: pre;
	margin: 0;
}

